--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
-	"name": "controllerkit",
-	"version": "1.0.0",
-	"description": "",
-	"main": "dist/controllerkit.js",
-	"publishConfig": { "registry": "https://npm.pkg.github.com/" },
-	"scripts": {
-		"start": "rm -rf dist && mkdir dist && rollup -c -w",
-		"build": "rm -rf dist && mkdir dist && rollup -c"
-	},
-	"keywords": ["typescript", "javascript", "gamepad", "controller"],
-	"author": "Magnetar",
-	"license": "ISC",
-	"devDependencies": {
-		"@rollup/plugin-typescript": "^4.1.1",
-		"rollup": "^2.6.1",
-		"tslib": "^1.11.1",
-		"typescript": "^3.8.3"
-	}
+  "name": "controllerkit",
+  "version": "1.0.1",
+  "description": "",
+  "main": "dist/controllerkit.js",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
+  "scripts": {
+    "dev": "rm -rf dist && mkdir dist && rollup -c -w",
+    "build": "rm -rf dist && mkdir dist && rollup -c"
+  },
+  "keywords": [
+    "typescript",
+    "javascript",
+    "gamepad",
+    "controller"
+  ],
+  "author": "Magnetar",
+  "license": "ISC",
+  "devDependencies": {
+    "@rollup/plugin-typescript": "^8.2.1",
+    "rollup": "^2.44.0",
+    "tslib": "^2.1.0",
+    "typescript": "^4.2.3"
+  }
 }
