--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "controllerkit",
-  "version": "1.0.1",
-  "description": "",
+  "version": "1.0.2",
+  "description": "A simple JavaScript library to serve as a common API for touch, keyboard, and gamepad inputs.",
   "main": "dist/controllerkit.js",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
