--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
-  "typeRoots": ["src/controllerkit.d.ts"],
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "types/controllerkit.d.ts"],
   "exclude": ["node_modules", "**/*.spec.ts"],
   "compilerOptions": {
     "lib": ["ESNext", "DOM"],
-    "target": "ES6"
+    "target": "ES6",
+    "declaration": true,
+    "declarationDir": "./types"
   }
 }
